# Pole-Position

C/: CMakeLists.txt  main.c
C/json/: cJson.c  cJson.h  json_object_iterator.h
C/sockets/: Server.c  Server.h
Java/src/: main.java
Java/src/server/: ClientSocket.java  Server.java
Pole/: build.gradle
Pole/core/src/com/mygdx/game/: PolePosition.java
gdx/: Snap.20200619.021242.2052.0003.trc  build.gradle  gdx.eml  gdx.userlibraries  gradle.properties  javacore.20200619.021242.2052.0002.txt
gdx/core/: gdx.core.eml
gdx/core/src/: gdx.core.main.eml
gdx/core/src/com/mygdx/game/: EndScreen.java  GameScreen.java  MenuScreen.java  PixMap3D.java  Pole_Position.java  Sprite3D.java
gdx/core/src/entidades/: Boost.java  Carro.java  Hole.java  Misil.java  Vida.java  carro.java  entidad.java  hole.java  hueco.java  misil.java  objeto.java
gdx/core/src/json/: ItemList.java  JSONArray.java  JSONAware.java  JSONObject.java  JSONStreamAware.java  JSONValue.java
gdx/core/src/json/parser/: ContainerFactory.java  ContentHandler.java  JSONParser.java  ParseException.java  Yylex.java  Yytoken.java
gdx/core/src/server/: Server.java
gdx/gradle/wrapper/: gradle-wrapper.properties
gdx/html/src/com/mygdx/game/: GdxDefinition.gwt.xml
gdx/html/webapp/: index.html
servidor/: CMakeLists.txt  car.c  car.h  constant.c  constant.h  game.c  game.h  main.c  object.c  object.h  pista.txt  player.c  player.h
test/: build.gradle
test/core/src/servers/: Server.java
test/html/webapp/: index.html
tests/: build.gradle
tests/core/src/server/: Server.java
(+3 files in other folders)
